--- a/src/pages/Sign/index.css
+++ b/src/pages/Sign/index.css
@@ -37,13 +37,13 @@ main {
   display: flex;
   font-family: "Rubik";
 }
-.logo-img {
+.logo-img-sign {
   width: 30px;
   height: 33px;
   margin-left: 56px;
   margin-top: 55px;
 }
-.logo-text {
+.logo-text-sign {
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
@@ -81,7 +81,7 @@ main {
   text-align: left;
   color: #4f5665;
 }
-.form-input {
+.form-input-sign {
   background: #ffffff;
   border: 1px solid #4f5665;
   color: #9f9f9f;
@@ -190,16 +190,16 @@ main {
 }
 /* info left */
 
-.info-left {
+.info-left-sign {
   flex: 1;
   padding-top: 75px;
 }
 
-.info-left-head {
+.info-left-sign-head {
   display: flex;
 }
 
-.info-left-text {
+.info-left-sign-text {
   font-family: "Rubik";
   font-style: normal;
   font-weight: 500;
@@ -208,24 +208,24 @@ main {
   color: #4f5665;
   margin-left: 60px;
 }
-.info-left-icon {
+.info-left-sign-icon {
   display: flex;
   margin-left: 40px;
 }
-.imgvektor {
+.imgvektor-sign {
   height: 30.600006103515625px;
   width: 30.600006103515625px;
   border-radius: 20px;
   background-color: #6a4029;
   margin-left: 20px;
 }
-.vimg {
+.vimg-sign {
   height: 33.600006103515625px;
   width: 33.600006103515625px;
   border-radius: 0px;
   color: #6a4029;
 }
-.info-left-foot {
+.info-left-sign-foot {
   padding-top: 30px;
   padding-left: 60px;
 }
@@ -238,18 +238,18 @@ main {
   color: #afb5c0;
 }
 
-.info-right {
+.info-right-sign {
   flex: 1;
   padding-top: 85px;
   width: 100%;
 }
-.info-right-body {
+.info-right-sign-body {
   width: 100%;
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: auto auto auto;
 }
-.info-right-text-head {
+.info-right-sign-text-head {
   grid-column: 1/3;
   font-family: "Rubik";
   font-style: normal;
@@ -258,7 +258,7 @@ main {
   line-height: 30px;
   color: #0b132a;
 }
-.info-right-text-last {
+.info-right-sign-text-last {
   grid-column: 1/3;
   font-family: "Rubik";
   font-style: normal;
@@ -267,7 +267,7 @@ main {
   line-height: 30px;
   color: #4f5665;
 }
-.info-right-text {
+.info-right-sign-text {
   font-family: "Rubik";
   font-style: normal;
   font-weight: 400;
@@ -301,11 +301,11 @@ main {
   .header-title {
     background-color: white;
   }
-  .logo-img {
+  .logo-img-sign {
     margin-left: 40px;
     margin-top: 40px;
   }
-  .logo-text {
+  .logo-text-sign {
     margin-top: 44.12px;
   }
   .title-text {
@@ -324,7 +324,7 @@ main {
     font-size: 18px;
     margin-top: 20px;
   }
-  .form-input {
+  .form-input-sign {
     font-size: 18px;
     height: 65px;
     border-radius: 18px;
@@ -371,37 +371,37 @@ main {
     column-gap: 5%;
     padding-top: 50px;
   }
-  .info-left {
+  .info-left-sign {
     flex: 1;
     padding: 40px;
     padding-top: 35px;
   }
-  .info-left-head {
+  .info-left-sign-head {
     display: flex;
     margin-left: -40px;
   }
-  .info-left-text {
+  .info-left-sign-text {
     margin-left: 0px;
   }
-  .info-left-icon {
+  .info-left-sign-icon {
     margin-left: 0px;
   }
-  .imgvektor {
+  .imgvektor-sign {
     margin-left: 0px;
     margin-right: 20px;
   }
-  .info-left-foot {
+  .info-left-sign-foot {
     padding-top: 20px;
     padding-left: 0px;
   }
 
-  .info-right {
+  .info-right-sign {
     flex: 1;
     padding-top: 55px;
     padding: 30px;
     padding-top: 30px;
   }
-  .info-right-body {
+  .info-right-sign-body {
     margin-top: 20px;
   }
 }
@@ -424,11 +424,11 @@ main {
     grid-template-rows: 130px auto auto;
     padding-bottom: 0px;
   }
-  .logo-img {
+  .logo-img-sign {
     margin-left: 30px;
     margin-top: 30px;
   }
-  .logo-text {
+  .logo-text-sign {
     margin-top: 34.12px;
   }
   .title-text {
@@ -445,7 +445,7 @@ main {
     font-size: 15px;
     margin-top: 8px;
   }
-  .form-input {
+  .form-input-sign {
     font-size: 15px;
     height: 50px;
     border-radius: 15px;
@@ -487,37 +487,37 @@ main {
     padding: 0 10%;
     margin-top: 50px;
   }
-  .info-left {
+  .info-left-sign {
     flex: 1;
     padding: 30px;
     padding-top: 10px;
   }
-  .info-left-head {
+  .info-left-sign-head {
     display: flex;
     margin-left: -30px;
   }
-  .info-left-text {
+  .info-left-sign-text {
     margin-left: 0px;
   }
-  .info-left-icon {
+  .info-left-sign-icon {
     margin-left: 0px;
   }
-  .imgvektor {
+  .imgvektor-sign {
     margin-left: 0px;
     margin-right: 20px;
   }
-  .info-left-foot {
+  .info-left-sign-foot {
     padding-top: 20px;
     padding-left: 0px;
   }
 
-  .info-right {
+  .info-right-sign {
     flex: 1;
     padding-top: 55px;
     padding: 30px;
     padding-top: 15px;
   }
-  .info-right-body {
+  .info-right-sign-body {
     margin-top: 0px;
     margin-bottom: 20px;
   }
