data profile user, register user, loading page

--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -438,7 +438,7 @@ body {
   background: #dde0e4;
   border-radius: 50%;
 }
-.list-active > img {
+.list-active-foot > img {
   width: 60px;
   height: 15px;
 }
