--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -12,7 +12,7 @@
   src: url("/src/asset/font/Poppins/Poppins-Regular.ttf");
 }
 /* footer */
-.section-footer {
+.section-footer-home {
   min-height: 528px;
   width: 100%;
   margin-top: -116px;
@@ -21,6 +21,18 @@
   padding: 0 5%;
   padding-top: 170px;
   padding-bottom: 90px;
+  background: #f8f8f8;
+}
+.section-footer {
+  min-height: 528px;
+  width: 100%;
+  margin-top: 0px;
+  display: flex;
+  column-gap: 20%;
+  padding: 0 5%;
+  padding-top: 99px;
+  padding-bottom: 90px;
+  background: #f8f8f8;
 }
 /* .section-footer {
   min-height: 528px;
@@ -128,9 +140,15 @@
 /* Tablet responsive */
 @media only screen and (max-width: 950px) {
   /* section footer */
-  .section-footer {
+  .section-footer-home {
     padding: 0 10%;
     padding-top: 170px;
+    padding-bottom: 90px;
+    column-gap: 10%;
+  }
+  .section-footer {
+    padding: 0 10%;
+    padding-top: 99px;
     padding-bottom: 90px;
     column-gap: 10%;
   }
@@ -140,10 +158,19 @@
 /* mobile responsive */
 @media only screen and (max-width: 650px) {
   /* section footer */
-  .section-footer {
+  .section-footer-home {
     padding: 0 10%;
     padding-left: 15%;
     padding-top: 170px;
+    padding-bottom: 90px;
+    column-gap: 10%;
+    flex-direction: column-reverse;
+    justify-content: space-between;
+  }
+  .section-footer {
+    padding: 0 10%;
+    padding-left: 15%;
+    padding-top: 99px;
     padding-bottom: 90px;
     column-gap: 10%;
     flex-direction: column-reverse;
