--- a/src/pages/ProductDetails/ProductDetails.css
+++ b/src/pages/ProductDetails/ProductDetails.css
@@ -31,35 +31,48 @@
   padding-top: 38px;
   height: 128px;
 }
-.product-detail-left-head > p {
+.link-products-detail {
   font-family: "Rubik";
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
   color: #4f5665;
+  text-decoration: none;
 }
-.product-detail-left-head > p > span {
+.link-products-detail:hover {
+  color: #ffba33;
+}
+.span-product-name {
+  font-family: "Rubik";
+  font-style: normal;
   font-weight: bold;
   color: #6a4029;
+  font-size: 20px;
+  line-height: 24px;
 }
 .product-detail-left-body {
   height: 790px;
-
-  background: url("../../asset/img/productsDetailPage/bg.png");
-  background-size: cover;
-  padding: 23px 26px;
 }
 .product-detail-left-body > section {
+  margin: 23px 26px;
   width: 55px;
   height: 55px;
   border-radius: 50%;
   background: #ffffff;
   border: 6px solid #ffba33;
+  position: absolute;
+  z-index: 3;
 }
 .product-detail-left-body > section > img {
   width: 50%;
   height: 50%;
+  position: absolute;
+  z-index: 4;
+}
+.product-detail-img {
+  width: 100%;
+  height: 100%;
 }
 
 .product-detail-left-foot {
@@ -106,11 +119,10 @@
   padding-left: 2.5%;
 }
 .step-line {
-  background: red;
   border: 2px solid #e0e0e2;
 }
 .step-order-product-text {
-  column-gap: 14.5%;
+  column-gap: 17%;
 }
 .step-order-product-text > p {
   font-family: "Poppins";
@@ -122,7 +134,7 @@
   color: #000000;
 }
 .product-detail-right-body {
-  height: 410px;
+  height: auto;
 }
 .product-detail-right-body > h4 {
   font-family: "Poppins";
@@ -184,6 +196,7 @@
   padding: 0 10%;
   border: 1px solid #9f9f9f;
   border-radius: 10px;
+  margin-bottom: 20px;
 }
 .input-number-quantity > h5 {
   font-family: "Poppins";
@@ -197,6 +210,10 @@
 .btn-plus-quantity,
 .btn-min-quantity {
   cursor: pointer;
+}
+.btn-plus-quantity:hover,
+.btn-min-quantity:hover {
+  color: #ffba33;
 }
 .btn-product-detail-cart {
   height: 83px;
@@ -228,3 +245,60 @@
   color: #ffffff;
   width: 100%;
 }
+
+/* responsive tablet */
+@media only screen and (max-width: 1000px) {
+  .product-details-box {
+    flex-direction: column;
+  }
+  /* right */
+  .step-order-product {
+    padding-left: 0;
+    width: 100%;
+    justify-content: center;
+  }
+  .step-order-product-text {
+    column-gap: 15%;
+    width: 100%;
+    justify-content: center;
+  }
+}
+@media only screen and (max-width: 950px) {
+  .product-details-box {
+    flex-direction: column;
+  }
+  /* right */
+  .step-order-product-text {
+    column-gap: 15%;
+  }
+}
+/* responsive mobile */
+@media only screen and (max-width: 470px) {
+  .product-detail-left-foot {
+    padding-right: 0;
+  }
+  .step-order-product {
+    padding: 0 5%;
+    width: 100%;
+    justify-content: center;
+  }
+  .step-order-product-text {
+    margin-left: -3%;
+  }
+  .step-order-product-text > p {
+    font-size: 15px;
+  }
+
+  .step-line {
+    border: 2px solid #e0e0e2;
+    min-width: 30px;
+    max-width: 75px;
+  }
+}
+@media only screen and (max-width: 390px) {
+  .step-order-product-text {
+    margin-left: -7%;
+  }
+}
+
+/* responsive mobile */
