--- a/src/pages/Payment/Payment.css
+++ b/src/pages/Payment/Payment.css
@@ -38,7 +38,7 @@
   margin-right: 30%;
 }
 .order-body {
-  height: 737px;
+  min-height: 737px;
   background: #ffffff;
   box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.35);
   border-radius: 20px;
@@ -56,7 +56,9 @@
   color: #362115;
 }
 .order-body-list {
-  min-height: 225px;
+  overflow-x: clip;
+  overflow-y: scroll;
+  height: 215px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.3);
 }
 .box-order-list {
@@ -95,7 +97,7 @@
   color: #000000;
 }
 .order-body-cost {
-  height: 163px;
+  min-height: 163px;
   display: flex;
   justify-content: space-between;
   padding-top: 18px;
