--- a/src/pages/History/History.css
+++ b/src/pages/History/History.css
@@ -36,6 +36,13 @@
   color: #ffffff;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.8);
 }
+.box-cursor-pointer {
+  cursor: pointer;
+  text-decoration: none;
+}
+.box-cursor-pointer:hover {
+  box-shadow: 5px 5px #6a4029;
+}
 .select-history {
   font-family: "Rubik";
   font-style: normal;
@@ -45,6 +52,7 @@
   text-align: center;
   color: #ffffff;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.8);
+  cursor: pointer;
 }
 .delete-history {
   font-family: "Poppins";
@@ -61,7 +69,7 @@
   min-height: 430px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  column-gap: 2%;
   padding-bottom: 71px;
 }
 .box-history {
