--- a/src/pages/Sign/index.css
+++ b/src/pages/Sign/index.css
@@ -99,7 +99,7 @@ main {
   border-top: 1px solid #4f5665;
   border-left: 1px solid #4f5665;
   border-bottom: 1px solid #4f5665;
-  color: #9f9f9f;
+  color: #0b132a;
   height: 75px;
   border-radius: 20px;
   font-family: "Rubik";
