--- a/src/pages/Dahsboard/Dahsboard.css
+++ b/src/pages/Dahsboard/Dahsboard.css
@@ -408,3 +408,129 @@
   max-width: 95%;
   margin-left: 5%;
 }
+
+/* responsive tablet */
+
+@media only screen and (max-width: 1000px) {
+  .dashboard-body-chart {
+    width: 100%;
+  }
+  .side-text-chart {
+    font-size: 16px;
+  }
+  .info-graph-text {
+    text-align: center;
+    font-size: 16px;
+  }
+  .dashboard-body-info {
+    height: auto;
+    margin-top: 50px;
+    padding: auto 0;
+  }
+  .dashboard-body-info-up {
+    width: 100%;
+    max-width: 100%;
+    margin: auto 0;
+    margin-bottom: 50px;
+    height: auto;
+    padding: auto 0;
+  }
+  .best-staf-info-head {
+    height: auto;
+    padding-bottom: 20px;
+  }
+  .photo-staf-icon {
+    text-align: end;
+  }
+  .photo-staf-icon > img {
+    width: 80%;
+    height: 100px;
+  }
+  .dashboard-body-info-down {
+    width: 100%;
+    max-width: 100%;
+    margin: auto 0;
+    margin-bottom: 50px;
+    height: auto;
+    padding: 20px 0;
+  }
+  .dashboard-body-foot > div > section > button {
+    font-size: 22px;
+    height: 79px;
+    margin-bottom: 30px;
+    width: 100%;
+  }
+  .share-btn-report {
+    margin: auto 0;
+    width: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .dashboard-body-head > h5 {
+    height: auto;
+  }
+  .text-head-chart > h5 {
+    font-size: 25px;
+  }
+  .text-head-chart > p {
+    font-size: 18px;
+  }
+  .list-bullet-dashboard {
+    font-size: 16px;
+  }
+  .bullet-text-active {
+    font-size: 16px;
+  }
+  .dashboard-body-foot {
+    padding-top: 0;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .list-bullet-dashboard > section {
+    height: 25px;
+    width: 20%;
+  }
+  .bullet-dashboard {
+    width: 30px;
+    height: 30px;
+    border: 8px solid #9f9f9f;
+  }
+  .bullet-dashboard-active {
+    width: 30px;
+    height: 30px;
+    border: 8px solid #6a4029;
+  }
+  .body-chart-head {
+    justify-content: space-between;
+  }
+  .text-head-chart {
+    width: auto;
+  }
+  .bullet-list-chart {
+    width: auto;
+  }
+  .bullet-btn-chart {
+    width: 10px;
+    height: 10px;
+  }
+
+  /* chart */
+  .side-text-chart {
+    font-size: 14px;
+  }
+  .info-graph-text {
+    text-align: center;
+    font-size: 14px;
+  }
+  .id-rupiah-text {
+    display: none;
+  }
+
+  .photo-staf-icon > img {
+    width: 100%;
+    height: 70px;
+  }
+}
