--- a/src/pages/Payment/Payment.css
+++ b/src/pages/Payment/Payment.css
@@ -13,9 +13,8 @@
 }
 /* no order */
 .no-order-chart {
-  min-height: 500px;
-  padding-top: 15vh;
-  padding-bottom: 50px;
+  height: auto;
+  padding: 15vh 0;
 }
 .no-order-chart > img {
   width: 50%;
